<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.highway.to.urhell</groupId>
	<artifactId>struts2</artifactId>
	<packaging>war</packaging>
	<version>1.0</version>
	<name>struts2</name>
	<url>http://maven.apache.org</url>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.struts</groupId>
			<artifactId>struts2-core</artifactId>
			<version>2.3.1.2</version>
		</dependency>
	</dependencies>
	<build>
		<finalName>Struts2Example</finalName>
		 <defaultGoal>jetty:run-forked</defaultGoal>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.8</version>
                <executions>
                    <execution>
                        <id>unpack</id>
                        <goals>
                            <goal>unpack</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>io.highway.to.urhell</groupId>
                                    <artifactId>h2hell-distribution</artifactId>
                                    <version>0.0.1-SNAPSHOT</version>
                                    <classifier>distrib</classifier>
                                    <type>zip</type>
                                </artifactItem>
                            </artifactItems>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<configuration>
						<jvmArgs>
                        -javaagent:${project.build.directory}/h2hell-distribution-0.0.1-SNAPSHOT/h2hell-agent-0.0.1-SNAPSHOT.jar
                        -Djava.ext.dirs=${project.build.directory}/h2hell-distribution-0.0.1-SNAPSHOT/
                    </jvmArgs>
					<stopKey>foo</stopKey>
					<stopPort>9999</stopPort>
					<webAppConfig>
						<contextPath>/core/</contextPath>
					</webAppConfig>
					<scanIntervalSeconds>10</scanIntervalSeconds>
				</configuration>
				<dependencies>
				<!-- <dependency>
						<groupId>org.apache.myfaces.core</groupId>
						<artifactId>myfaces-impl</artifactId>
						<version>1.1.2</version>
					</dependency>
					<dependency>
						<groupId>org.apache.myfaces.core</groupId>
						<artifactId>myfaces-api</artifactId>
						<version>1.1.2</version>
					</dependency>
					<dependency>
						<groupId>log4j</groupId>
						<artifactId>log4j</artifactId>
						<version>1.2.9</version>
					</dependency>-->
				</dependencies>
			</plugin>
		</plugins>
	</build>
</project>
